[package]
name = "certificate-expiration-retriever"
version = "1.0.0"
edition = "2021"
authors = ["Sean Hardwick <aun.sswick@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
native-tls = { version = "0.2.8" }
x509-parser = { version = "0.12" }
